this code is fainal assignment code

--- a/index.html
+++ b/index.html
@@ -161,10 +161,11 @@
             <button id="clear-btn" class="bg-blue-700  text-white rounded-md w-full mt-4 py-2">Clear History</button>
             <div id="update-btn" class="mt-5">
                 <div class="bg-gray-100 rounded-lg p-3 mb-3">
-                    You have completed the task: **Add Dark Mode** at 12:48 PM
+                    <!-- You have completed the task: **Add Dark Mode** at 12:48 PM -->
+                     <h2 ><span id="initial-btn">Not a single card visited</span></h2>
                 </div>
                 <div class="bg-gray-100 rounded-lg p-3">
-                    You have completed the task: **Fix Mobile Issue** at 11:30 AM
+                    <!-- You have completed the task: **Fix Mobile Issue** at 11:30 AM -->
                 </div>
             </div>
         </div>
