--- a/blog.html
+++ b/blog.html
@@ -17,31 +17,48 @@
         }
     </style>
 </head>
-<body class=" mx-auto bg-gray-400 text-black mt-5 mb-5 ml-5 mr-5 rounded-md shadow-xl">
-    <section class="ml-20 space-x-5 border border-red-200 p-5 mr-20 mt-10">
-         <h1 class="mb-3 ml-2 mr-32"><span class="border border-red-400 rounded shadow-xl p-2 text-black text-xl bg-white hover:bg-green-200">Question-1:</span> What are the different ways to select an element in the DOM?</h1>
-         <p><span class="text-black  bg-white rounded space-x-6 mr-5">Answer:</span>There are many types of ways to selected element in DOM. Such as <br>
-           1. Using getElementById.<br>
-           2. Using getElementsByClassName.<br>
-           3. Using getElementsByTagName.<br>
-           4. Using querySelector.<br>
-        5. Using querySelectorAll.<br>
-         </p>
+<body>
+    
+    <!-- navbar design -->
+    <nav class="bg-slate-300 rounded-xl shadow-md py-5 px-10 mt-10 ml-7 mr-7">
+        <div class="flex justify-between items-center">
+            <div class="flex gap-2 items-center">
+                <img class="w-7 h-7" src="assets/logo.png" alt="">
+                <h1 class="text-xl font-bold">DevBoard</h1>
+            </div>
+            <div class="flex items-center gap-3">
+                <button id="back-btn" class="text-blue-700 text-ml border border-green-700 ring-emerald-500 rounded">Back to Desk</button>
+            </div>
+        </div>
+    </nav>
+    <section class=" mx-auto bg-gray-400 text-black mt-5 mb-5 ml-5 mr-5 rounded-md shadow-xl">
+        <section class="ml-20 space-x-5 border border-red-200 p-5 mr-20 mt-10">
+            <h1 class="mb-3 ml-2 mr-32"><span class="border border-red-400 rounded shadow-xl p-2 text-black text-xl bg-white hover:bg-green-200">Question-1:</span> What are the different ways to select an element in the DOM?</h1>
+            <p><span class="text-black  bg-white rounded space-x-6 mr-5">Answer:</span>There are many types of ways to selected element in DOM. Such as <br>
+              1. Using getElementById.<br>
+              2. Using getElementsByClassName.<br>
+              3. Using getElementsByTagName.<br>
+              4. Using querySelector.<br>
+           5. Using querySelectorAll.<br>
+            </p>
+       </section>
+       <section class="ml-20 space-x-5 border border-red-200 p-5 mr-20 mt-10">
+           <h1 class="mb-3 ml-2 mr-32"><span class="border border-red-400 rounded shadow-xl p-2 text-black text-xl bg-white  hover:bg-green-200">Question-2:</span> What is the difference between InnerHTML , InnerText and TextContent?</h1>
+           <p class="mt-5"><span class="text-black  bg-white rounded space-x-6 mr-5">Answer:</span> innerHTML:- The innerHTML property gets or sets the HTML contents of the element</p>
+           <p>textContent: The textContent does not automatically encode and decode text and hence allows us to work with only the content part of the element</p>
+       </section>
+       <section class="ml-20 space-x-5 border border-red-200 p-5 mr-20 mt-10">
+           <h1><span class="border border-red-400 rounded shadow-xl p-2 text-black text-xl bg-white  hover:bg-green-200">Question-1:</span> What is event delegation in the DOM ?</h1>
+           <p class="mt-5"><span class="text-black  bg-white rounded space-x-6 mr-5">Answer:</span> Event delegation in the DOM is a JavaScript technique where you attach a single event listener to a parent element, allowing it to handle events triggered on its child elements</p>
+       </section>
+       <section class="ml-20 space-x-5 border border-red-200 p-5 mr-20 mt-10"> <h1>
+           <span class="border border-red-400 rounded shadow-xl p-2 text-black text-xl bg-white  hover:bg-green-200">Question-1:</span> Wha is event building int the DOM?
+       </h1>
+            <p class="mt-5"><span class="text-black bg-white rounded space-x-6 mr-5">Answer:</span> Event building" in the DOM (Document Object Model) refers to the process of attaching event listeners to specific elements within a web page, allowing JavaScript to respond to user interactions like clicks, hovers, or key presses by triggering functions when those events occur on the designated elements within the DOM tree; essentially, it's the mechanism to create interactive behavior on a webpage by defining what actions should happen when certain events are triggered on the page. </p>
+   </section>
     </section>
-    <section class="ml-20 space-x-5 border border-red-200 p-5 mr-20 mt-10">
-        <h1 class="mb-3 ml-2 mr-32"><span class="border border-red-400 rounded shadow-xl p-2 text-black text-xl bg-white  hover:bg-green-200">Question-2:</span> What is the difference between InnerHTML , InnerText and TextContent?</h1>
-        <p class="mt-5"><span class="text-black  bg-white rounded space-x-6 mr-5">Answer:</span> innerHTML:- The innerHTML property gets or sets the HTML contents of the element</p>
-        <p>textContent: The textContent does not automatically encode and decode text and hence allows us to work with only the content part of the element</p>
-    </section>
-    <section class="ml-20 space-x-5 border border-red-200 p-5 mr-20 mt-10">
-        <h1><span class="border border-red-400 rounded shadow-xl p-2 text-black text-xl bg-white  hover:bg-green-200">Question-1:</span> What is event delegation in the DOM ?</h1>
-        <p class="mt-5"><span class="text-black  bg-white rounded space-x-6 mr-5">Answer:</span> Event delegation in the DOM is a JavaScript technique where you attach a single event listener to a parent element, allowing it to handle events triggered on its child elements</p>
-    </section>
-    <section class="ml-20 space-x-5 border border-red-200 p-5 mr-20 mt-10"> <h1>
-        <span class="border border-red-400 rounded shadow-xl p-2 text-black text-xl bg-white  hover:bg-green-200">Question-1:</span> Wha is event building int the DOM?
-    </h1>
-         <p class="mt-5"><span class="text-black bg-white rounded space-x-6 mr-5">Answer:</span> Event building" in the DOM (Document Object Model) refers to the process of attaching event listeners to specific elements within a web page, allowing JavaScript to respond to user interactions like clicks, hovers, or key presses by triggering functions when those events occur on the designated elements within the DOM tree; essentially, it's the mechanism to create interactive behavior on a webpage by defining what actions should happen when certain events are triggered on the page. </p>
-</section>
-<source src="js/toggle.js" type="">
+   
+<script src="js/toggle.js"></script>
+    <script src="js/back.js"></script>
 </body>
 </html>
