--- a/blog.html
+++ b/blog.html
@@ -24,10 +24,10 @@
         <div class="flex justify-between items-center">
             <div class="flex gap-2 items-center">
                 <img class="w-7 h-7" src="assets/logo.png" alt="">
-                <h1 class="text-xl font-bold">DevBoard</h1>
+                <h1 class="text-xl font-bold text-black">DevBoard</h1>
             </div>
             <div class="flex items-center gap-3">
-                <button id="back-btn" class="text-blue-700 text-ml border border-green-700 ring-emerald-500 rounded">Back to Desk</button>
+                <button id="back-btn" class="text-white p-2 text-ml border border-green-700 ring-emerald-500 rounded bg-blue-600">Back to Desk</button>
             </div>
         </div>
     </nav>
